apache_jira_description_comments/ZOOKEEPER-2777_description.txt
While trying to create an RPM from zookeeper 3.4.10, I got an error when it tried to compile the file :

zookeeper/contrib/zkpython/src/python/zk.py", line 55
    """Pretty print(a zookeeper tree, starting at root""")
                                                         ^
SyntaxError: invalid syntax
